mobile responsive done

--- a/nexus-3.0/src/App.css
+++ b/nexus-3.0/src/App.css
@@ -9,3 +9,11 @@ h2{
   font-size: 2rem;
   color: #007BFF;
 }
+@media(max-width:480px){
+  h2{
+    font-size: 1rem;
+  }
+  p{
+    font-size: 0.7rem;
+  }
+}
