--- a/nexus-3.0/src/Stylesheets/CompanyGrid.css
+++ b/nexus-3.0/src/Stylesheets/CompanyGrid.css
@@ -52,3 +52,34 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+@media (max-width: 480px){
+  .company-grid{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .company-card{
+    width: 100px;
+    height: 120px;
+  }
+}
+@media (max-width: 768px){
+  .company-grid{
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+@media (max-width:480px){
+  .company-grid{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .company-card{
+    height: 80px;
+    width: 80px;
+    padding: 5px;
+  }
+  .company-grid-container{
+    padding: 10px 0px
+  }
+  .company-logo{
+    height: 50px;
+    width: 50px;
+  }
+}
