--- a/nexus-3.0/src/Stylesheets/DepartmentInfo.css
+++ b/nexus-3.0/src/Stylesheets/DepartmentInfo.css
@@ -1,6 +1,6 @@
 .department-info {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin: 20px 0px;
   }
   h2 {
     text-align: center;
@@ -27,6 +27,7 @@
     border-color: #5c8dff;
   }
   .department-cards-container {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -35,8 +36,8 @@
     background-color: #333;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 20px;
-    margin: 10px;
+    padding: 10px;
+    margin: 10px 0px;
     width: 300px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -99,5 +100,26 @@
     font-size: 0.7rem;
     color: #fff;
     margin-top: 20px;
+  }
+  @media(max-width:480px){
+    .department-card-header h3{
+      font-size: 0.7rem;
+    }
+    .hod-message{
+      margin: 10px 0px;
+    }
+    .department-card h4{
+      font-size: 0.6rem;
+    }
+    .department-card p{
+      font-size: 0.5rem;
+      margin: 5px;
+    }
+    .department-card{
+      width: 150px;
+    }
+    .department-card li{
+      font-size: 0.6rem;
+    }
   }
   
