--- a/nexus-3.0/src/Stylesheets/Footer.css
+++ b/nexus-3.0/src/Stylesheets/Footer.css
@@ -1,24 +1,26 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css');
 
 .footer {
-  background-color: #333;
+  background-color: #000;
   color: #fff;
   font-family: 'Arial', sans-serif;
-  padding: 20px 60px 10px 60px;
+  padding: 20px 30px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
 .footer-container {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+  height: auto; 
   width: 100%;
-  height: 15vh;
   max-width: 1200px;
   flex-wrap: wrap;
   gap: 30px;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
 }
 
 .footer-section {
@@ -26,13 +28,15 @@
   min-width: 220px;
   max-width: 300px;
   padding: 10px;
+  text-align: center; 
 }
 
 .footer-section h3 {
-    color: #fff;
+  color: #fff;
   font-size: 1.2rem;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   font-weight: bold;
+  text-align: center; 
 }
 
 .footer-section p {
@@ -45,6 +49,9 @@
 .footer-section ul {
   list-style-type: none;
   padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 .footer-section ul li {
@@ -52,7 +59,7 @@
 }
 
 .footer-section ul li a {
-    color: #fff;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -64,22 +71,23 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  align-items: center; 
 }
 
 .social-links a {
-    color: #FFF;
+  color: #fff;
   font-size: 1rem;
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .social-links a:hover {
-  color: #fff;
+  color: #ddd;
 }
 
 .footer-bottom {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 0px;
   background-color: #222;
   padding: 10px;
   font-size: 1rem;
@@ -95,6 +103,7 @@
   .footer-container {
     flex-direction: column;
     align-items: center;
+    gap: 20px;
   }
 
   .footer-section {
@@ -104,6 +113,7 @@
 
   .footer-section ul {
     padding-left: 0;
+    align-items: center; 
   }
 
   .footer-section a {
@@ -119,14 +129,36 @@
 @media (max-width: 480px) {
   .footer-container {
     gap: 20px;
+    flex-direction: column;
+  }
+
+  .footer-section {
+    max-width: 100%;
+    text-align: center;
   }
 
   .footer-section h3 {
-    font-size: 1.1rem;
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
+
+  .footer-section p {
+    font-size: 0.7rem;
+    margin-bottom: 5px;
+  }
+
+  .footer-section ul li a {
+    font-size: 0.7rem;
+  }
+  .footer-section ul li{
+    margin: 5px 0px;
+  }
+  .social-links a {
+    font-size: 0.7rem;
   }
 
   .footer-bottom {
     font-size: 0.8rem;
-    padding: 10px;
+    padding: 8px;
   }
 }
