--- a/nexus-3.0/src/Stylesheets/HomePage.css
+++ b/nexus-3.0/src/Stylesheets/HomePage.css
@@ -1,3 +1,37 @@
+.collegeInfo {
+  position: relative;
+  width: 100%;
+  height: 100vh; 
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.videoBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  object-fit: cover; 
+  z-index: -1;
+}
+
+.contentOverlay {
+  color: #fff; 
+  text-align: center;
+  z-index: 3; 
+  height: 100%;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.4); 
+}
+.contentOverlay p{
+  color: white;
+}
+.bgvideo{
+  margin-top: 0;
+}
 .homepage {
     font-family: 'Arial', sans-serif;
     margin: 0 auto;
@@ -25,6 +59,7 @@
   .about {
     background-color: #f7f7f7;
     padding: 30px;
+    margin-top: 0px;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
@@ -88,7 +123,46 @@
   
   @media (max-width: 480px) {
     .placement-card {
-      width: 100%;
+      width
+      : 100%;
     }
+    .contentOverlay p{
+      font-size: 8px;
+    }
+    .videoBackground{
+      height: 70vh;
+    }
+    .about li{
+      font-size: 0.8rem;
+    }
+    .about h1{
+      font-size: 1rem;
+    }
+    .about{
+      padding: 10px 20px;
+    }
+    .homepage{
+      padding: 0px;
+    }
+    .chairman-message h1{
+      font-size: 1rem;
+    }
+    .placementss h1{
+      font-size: 1rem;
+    }
+    .student-image{
+      height: 50px;
+      width: 50px;
+    }
+    .placement-cardd h3{
+      font-size: 10px;
+    }
+    .placement-cardd p{
+      font-size: 8px;
+    }
+    .placement-cardss{
+      padding: 0px 10px;
+    }
+    
   }
   
