--- a/nexus-3.0/src/Stylesheets/AdmissionsPage.css
+++ b/nexus-3.0/src/Stylesheets/AdmissionsPage.css
@@ -3,12 +3,12 @@
     padding: 40px 20px;
   }
   
-  h1 {
+  /* h1 {
     text-align: center;
     color: #007BFF;
     font-size: 2.5rem;
     margin-bottom: 40px;
-  }
+  } */
   
   .tabs {
     display: flex;
