--- a/nexus-3.0/src/Stylesheets/EventsPage.css
+++ b/nexus-3.0/src/Stylesheets/EventsPage.css
@@ -39,7 +39,7 @@ h2 {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  min-height: 370px;
+  min-height: 200px;
 }
 
 .event-image {
@@ -99,13 +99,15 @@ h2 {
     padding: 5px;
   }
   .event-details h2{
-    font-size: 14px;
+    font-size: 9px;
+    margin-bottom: 2px;
   }
   .event-details p{
-    font-size: 12px;
+    font-size: 7px;
+    margin: 1px;
   }
   .event-details p:last-child{
-    margin-bottom: 10px;
+    margin-bottom: 2px;
   }
   .events-container{
     gap:10px
@@ -114,6 +116,13 @@ h2 {
     padding: 20px 0px;
   }
   .register-button{
-    font-size: 9px;
+    font-size: 6px;
+    height: 16px;
+    width: 45px;
+    bottom: 5px;
+    right: 5px;
+    text-align: center;
+    border-radius: 0px;
+    padding: 2px 2px;
   }
 }
