--- a/nexus-3.0/src/Stylesheets/AdmissionsPage.css
+++ b/nexus-3.0/src/Stylesheets/AdmissionsPage.css
@@ -127,7 +127,7 @@
   
   .modal button {
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     border: none;
     border-radius: 4px;
@@ -135,7 +135,7 @@
   }
   
   .modal button:hover {
-    background-color: #45a049;
+    background-color: #007BFF;
   }
   
   .enquire-btn {
