--- a/nexus-3.0/src/Stylesheets/ClubsPage.css
+++ b/nexus-3.0/src/Stylesheets/ClubsPage.css
@@ -29,15 +29,18 @@
   }
   
   .club-card {
-    background-color: #333;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
     margin: 10px;
     width: 300px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
-  
+  .club-card:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  }
   .club-card-header {
     text-align: center;
   }
@@ -60,7 +63,7 @@
   
   .faculty-message p, .club-president p {
     font-size: 0.7rem;
-    color: #fff;
+    color: #000;
   }
   @media(max-width:480px){
     .faculty-message h4,.club-president h4{
