--- a/nexus-3.0/src/Stylesheets/JobCard.css
+++ b/nexus-3.0/src/Stylesheets/JobCard.css
@@ -1,68 +1,65 @@
 .job-card {
-    background-color: #333;
-    width: 300px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    position: relative;
+  width: 300px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: auto;
+  color: #000;
+}
+.job-card:hover{
+  transform: translateY(-10px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+.job-card h3 {
+  font-size: 20px;
+  color: #007bff;
+  margin: 10px;
+}
+
+.job-card p {
+  font-size: 14px;
+  margin: 5px 15px;
+  color: #000;
+}
+
+.apply-button {
+  margin-top: auto; 
+  padding: 10px;
+  font-size: 14px;
+  background-color: #5965ee;
+  color: #fff;
+  border: none;
+  border-radius: 0px 0px 10px 10px; 
+  cursor: pointer;
+  text-align: center;
+  width: 100%; 
+}
+
+.apply-button:hover {
+  background-color: #0056b3;
+}
+
+@media (max-width: 480px) {
+  .job-card {
+    width: 150px;
     height: auto;
-    color: #fff;
   }
-  
+
   .job-card h3 {
-    font-size: 20px;
-    color: #007bff;
-    margin: 10px;
+    font-size: 10px;
+    margin: 5px 5px 2px 5px;
   }
-  
+
   .job-card p {
-    font-size: 14px;
-    margin: 5px 15px;
-    color: #fff;
+    font-size: 9px;
+    margin: 5px;
   }
-  
+
   .apply-button {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    padding: 10px 20px;
-    font-size: 14px;
-    background-color: #5965ee;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    text-align: center;
+    font-size: 10px;
+    padding: 5px;
   }
-  
-  .apply-button:hover {
-    background-color: #0056b3;
-  }
-  
-  @media (max-width: 480px) {
-    .job-card {
-      width: 150px;
-      height: auto;
-    }
-  
-    .job-card h3 {
-      font-size: 10px;
-      margin: 5px 5px 2px 5px;
-    }
-  
-    .job-card p {
-      font-size: 9px;
-      margin: 5px;
-    }
-    .apply-button {
-      font-size: 6px;
-      padding: 5px 10px;
-      bottom: 5px;
-      right: 5px;
-      border-radius: 2px;
-    }
-  }
-  
+}
