--- a/nexus-3.0/src/Stylesheets/StatsSection.css
+++ b/nexus-3.0/src/Stylesheets/StatsSection.css
@@ -4,6 +4,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 20px;
+  margin-top: 0px;
   padding: 50px 20px 0px 20px;
   background-color: #f9f9f9;
 }
